[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xsam"
version = "0.0.1"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.packages]
find = {}

[project.scripts]
xsam = "xsam.cli:cli"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
